Fix: API cors policy Fix

--- a/LaLigaTracker.html
+++ b/LaLigaTracker.html
@@ -132,7 +132,7 @@
 
   <script>
     // URL base de la API (ajustar si es necesario)
-    const apiBaseUrl = 'http://localhost:8080/api';
+    const apiBaseUrl = 'http://127.0.0.1:8080/api';
 
     // Función para obtener todos los partidos
     async function fetchMatches() {
